# ChangeLog for dev-lang/ocaml
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ocaml/ChangeLog,v 1.170 2009/08/02 12:19:49 flameeyes Exp $

  02 Aug 2009; Diego E. Pettenò <flameeyes@gentoo.org> ocaml-3.10.2.ebuild:
  Use serial make everywhere until fixed.

  01 Aug 2009; Diego E. Pettenò <flameeyes@gentoo.org> ocaml-3.10.2.ebuild:
  Use -j1 for make. Bug #279968.

  20 Jun 2009; Alexis Ballier <aballier@gentoo.org> ocaml-3.11.1.ebuild:
  use CHOST prefixed toolchain for building, this does not give us cross
  compile support though

  20 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  -files/ocaml-3.11.0_beta1-configure.patch,
  -files/ocaml-3.11.0_beta1-exec-stack-fixes.patch,
  -files/ocaml-3.11.0_beta1-yaccldflags.patch, ocaml-3.11.1.ebuild:
  Make a tarball from the various patches

  19 Jun 2009; Alexis Ballier <aballier@gentoo.org> -ocaml-3.11.0.ebuild:
  remove old

*ocaml-3.11.1 (15 Jun 2009)

  15 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  -ocaml-3.11.1_rc1.ebuild, +ocaml-3.11.1.ebuild:
  bump to final 3.11.1

  03 Jun 2009; Alexis Ballier <aballier@gentoo.org> -ocaml-3.08.4.ebuild:
  remove old

*ocaml-3.11.1_rc1 (03 Jun 2009)

  03 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  -ocaml-3.11.1_rc0.ebuild, +ocaml-3.11.1_rc1.ebuild:
  version bump

*ocaml-3.11.1_rc0 (19 May 2009)

  19 May 2009; Alexis Ballier <aballier@gentoo.org> ocaml-3.10.2.ebuild,
  ocaml-3.11.0.ebuild, +ocaml-3.11.1_rc0.ebuild:
  bump to 3.11.1rc0 and define eapi before inherit

  09 Apr 2009; Raúl Porcel <armin76@gentoo.org> ocaml-3.10.2.ebuild:
  arm stable

  20 Jan 2009; Alexis Ballier <aballier@gentoo.org> ocaml-3.08.4.ebuild,
  ocaml-3.10.2.ebuild, ocaml-3.11.0.ebuild:
  explicitly set RDEPEND to DEPEND

  20 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  files/ocaml-3.11.0_beta1-yaccldflags.patch:
  include upstream bug report link in the patch
