@@ -8,6 +8,6 @@ DIST ocaml-3.10.2.tar.bz2 2284860 RMD160 f631230b090dbd9bf9a9f71631cd0347c033cbb
 DIST ocaml-3.11.1.tar.gz 2859411 RMD160 7a48021e80602917cc91f7cc3305d5f3ab92b0bc SHA1 05ccb525bb53f8676e238de31209713ec38ae63a SHA256 70bf4ec660b07c9119123eb8ef2a5d9e5e98fac8c4082cca33b2622e91386b53
 DIST ocaml-patches-1.tar.bz2 3108 RMD160 ad56f8be4b15347794f3167be82124fcdbf6f6dc SHA1 542ae4c2b1515730fe0c9050b6658106ef69ad19 SHA256 ad1c252cba7cc50f70d19049fcd78aa359672e436ab9906424548229a04afa49
 EBUILD ocaml-3.10.2.ebuild 4595 RMD160 9134de4a71ac4b69b4c135047a9ae81601dc1ad3 SHA1 2b437bedc5ad82cd6dcddc56dd1235435782431a SHA256 1bb9ba3ca4de74dd77a58b3577f83a6ff3bc561f72f24b3f1a62e12f52b0c366
-EBUILD ocaml-3.11.1.ebuild 3900 RMD160 7c22d2698990d04c025564186ebca229707f4867 SHA1 3fbef6e38b0ff800f79658ebfea2209916cc7e4b SHA256 712ff8f1b9cc471bbf7df20357e9d25df5284a741efd1e587624a2e0940bb3b1
-MISC ChangeLog 27004 RMD160 8490b2ccad9b72a631f98a8e5da015d166323ad5 SHA1 734f0689306325b446f0c099ad7144cb6fb2f029 SHA256 f06b24340a460509b615ca328110fcbeafb76f8608ae753e776f7d139acd0349
+EBUILD ocaml-3.11.1.ebuild 4019 RMD160 e9733c6ac6d8b4004f9180de716d5813870bd26f SHA1 5ee9fc262b2a4e5be66ae5e4b4fec9d14f4a6a1b SHA256 e0e226a5e425f787fa857677d0b1b0f69e18b8c06bf664cc6bd2d56b4d306323
+MISC ChangeLog 27211 RMD160 a554a134065667a6cffb0007a443bdd80dc30498 SHA1 dbbe66163b4a8711e5f766e39feb606b9061c178 SHA256 4bd173bb1f47c834dcd2383cdef969244491e346c76c5a0773d7f2ae14435e22
 MISC metadata.xml 155 RMD160 dfaa057e679b01302a807c75a32a910098b26809 SHA1 94024f83dcacbb53e92be090dd0f994ec93dc90d SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81
